# internal/routes/routers/card_router.go
@@ -29,6 +29,7 @@ func Card(r *gin.RouterGroup) {
 
 		// comments
 		g.POST("/cards/:id/comments", middleware.Authorize("comment_add"), h.AddComment)
+		g.PATCH("/cards/comments/:commentId", middleware.Authorize("comment_edit"), h.UpdateComment)
 		g.GET("/cards/:id/comments", middleware.Authorize("comment_view"), h.ListComments)
 
 		// History
